--- a/roles/nri_prometheus/templates/config.yml.j2
+++ b/roles/nri_prometheus/templates/config.yml.j2
@@ -1,5 +1,5 @@
 # The name of your cluster. It's important to match other New Relic products to relate the data.
-cluster_name: "{{ cluster_name }}"
+cluster_name: "{{ new_relic_cluster_name }}"
 
 # When standalone is set to false nri-prometheus requires an infrastructure agent to work and send data. Defaults to true
 # standalone: true
